--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 　　layout: default
 　　title: 我的Blog
 ---
-　　<h2>我的Blog</h2>
+　　<div align=center><h2>我的Blog</h2></div>
 　　<p>最新文章</p>
 　　<ul>
 　　　　{% for post in site.posts %}
